--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -28,11 +28,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Cloud Connect</title>
+
+  <title>Cloud Sense Vis</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
    <!-- Firebase SDK (modular version) -->
-   <script type="module">
+   <!-- <script type="module">
     // Import Firebase SDK
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
     import { getMessaging } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-messaging.js";
@@ -65,9 +66,9 @@
         .catch(function (error) {
           console.log('Service Worker registration failed:', error);
         });
-    }
+    } -->
 
-    // You can further add Firebase Messaging logic here, like requesting permissions or receiving messages
+    <!-- // You can further add Firebase Messaging logic here, like requesting permissions or receiving messages -->
   </script>
   <style id="splash-screen-style">
     html {
